feat(auth): OIDC implementation - Starting the first round of OIDC implementation using JWKS - Moving all auth related functionality into it's own auth module - Adding validation to auth configuration for OIDC type - Moving where the auth guard is located and updating a bunch of references with that - Updating unsecure config to include OIDC config, if enabled - Adding new auth provider to frontend - Adding new login form display so OIDC can be logged in with instead - Still need to do documentation and local strategy implementation for non OIDC usage
